# google-vision-demo

demo/: README.md  demo.cabal
demo/exe/: Main.hs
demo/src/Demo/: Image.hs  Server.hs  Service.hs
demo/src/Google/Cloud/: Vision.hs
